# pyquil

./: .coveragerc  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.test  Dockerfile_jupyter  LICENSE  MANIFEST.in  Makefile  NOTICE  NOTICE.md  README.md  Untitled.ipynb  V4_PRERELEASE_CHANGELOG.md  config_setup.py  conftest.py  docker-compose.yaml  docker-compose.yml  entrypoint.sh  knope.toml  local.py  mypy.ini  package-lock.json  package.json  prepare_release.sh  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  start.sh  (+1 more)
.devcontainer/: devcontainer.json  docker-compose.extend.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: bench.yml  benchmark_base.yml  benchmark_pr.yml  commit_syntax.yml  docker-publish.yml  prepare-release.yml  prerelease.yml  publish-test.yml  publish.yml  release-docker.yml  release-dry-run.yml  release.yml  test.yml
benchmarks/: test_parser.py
docs/: Makefile  README.md  connections.rst  rtfd-requirements.txt
docs/source/: 2.0_quickstart_and_migration.rst  Advanced_Usage.rst  Basics.rst  Migration.ipynb  Migration2-qc.ipynb  Migration2.ipynb  Migration3.ipynb  SDK_Download_Instructions.rst  advanced_usage.rst  api.rst  basics.rst  changes.rst  compiler.rst  compiler_usage.rst  conf.py  device.rst  device_class.rst  devices.rst  examples.rst  exercises.rst  forest.rst  gates.rst  gateset_noise.rst  getting_started.rst  index.rst  intro.rst  intro_to_qc.ipynb  intro_to_qc.rst  intro_to_quantum_information.rst  introducing_v4.rst  job_results.rst  kraus.rst  migration.ipynb  migration.rst  migration2-qc.ipynb  migration3-declare.ipynb  migration4.rst  modules.rst  next_steps.rst  noise.rst  (+34 more)
examples/: 1.3_vqe_demo.py  AmplitudeDampingNoise.ipynb  DeviceNoiseModel.ipynb  GateNoiseModels.ipynb  H2_sto-3g_singlet.inp  LaTeX Circuits.ipynb  LaTeXQuilCircuits.ipynb  NoiseInvestigation.ipynb  QPUExamples.ipynb  QubitPlaceholder.ipynb  README.md  ReadoutNoise.ipynb  benchmarking_example.ipynb  forest2-simple-prog.py  getting_started.ipynb  hello_world.quil  meas_obs_n_density_qvm_tomo.ipynb  meyer_penny_game.py  old-website-script.py  phase_estimation.py  pointer.py  post_rabi.py  post_ramsey.py  post_t1.py  pyQuil_readout_symm.ipynb  pyquillow.ipynb  qaoa_ansatz.py  quantum_die.py  quantum_walk.ipynb  requirements.txt  run_quil.py  teleportation.py  website-script.py  website-script2.py
notebooks/: Welcome.ipynb  test_bell_state.ipynb
pyquil/: __init__.py  _memory.py  _version.py  analytics.py  api.py  config.py  control_flow_graph.py  device.py  device_info.py  diagnostics.py  forest.py  gate_matrices.py  gates.py  grammar.lark  job_results.py  kraus.py  magic.py  noise.py  noise_gates.py  numpy_simulator.py  operator_estimation.py  parameters.py  parametric.py  parser.py  parser2.py  paulis.py  paulis_parser.py  plots.py  pragmas.py  pyqvm.py  qpu.py  quil.py  quil_atom.py  quilatom.py  quilbase.py  quiltcalibrations.py  quiltwaveforms.py  reference_simulator.py  resource_manager.py  slot.py  (+3 more)
pyquil/_parser/: PyQuilListener.py  Quil.g4  README.md  grammar.lark  parser.py
pyquil/api/: __init__.py  _abstract_compiler.py  _auth.py  _base_connection.py  _benchmark.py  _client.py  _compiler.py  _compiler_client.py  _config.py  _devices.py  _engagement_manager.py  _error_reporting.py  _errors.py  _job.py  _logger.py  _memory.py  _persistent_qvm.py  _qac.py  _qam.py  _qcs_client.py  _qpu.py  _qpu_client.py  _quantum_computer.py  _quantum_processors.py  _qvm.py  _qvm_client.py  _rewrite_arithmetic.py  _wavefunction_simulator.py  compiler.py  errors.py  job.py  qpu.py  quantum_computer.py  qvm.py  wavefunction_simulator.py
pyquil/compatibility/: __init__.py
pyquil/device/: __init__.py  _base.py  _isa.py  _library.py  _main.py  _specs.py  compiler.py  devices.py  graph.py  qcs.py
pyquil/experiment/: __init__.py  _group.py  _main.py  _memory.py  _program.py  _result.py  _setting.py  _symmetrization.py
pyquil/experimental/: __init__.py  _program.py
pyquil/latex/: __init__.py  _diagram.py  _ipython.py  _main.py  ipython.py  latex_config.py  latex_generation.py
pyquil/quantum_processor/: __init__.py  _base.py  compiler.py  graph.py  qcs.py
pyquil/setup/: config.py  pyquil_config_setup.py
pyquil/simulation/: __init__.py  _numpy.py  _reference.py  matrices.py  tools.py
pyquil/tests/: conftest.py  pytest.lprof  test_api.py  test_base_connection.py  test_compiler_client.py  test_config.py  test_device.py  test_device_info.py  test_engagement_manager.py  test_examples.py  test_forest.py  test_gate_matrices.py  test_gates.py  test_job_results.py  test_kraus.py  test_latex.py  test_magic.py  test_noise.py  test_noise_gates.py  test_numpy_simulator.py  test_operator_estimation.py  test_parameters.py  test_parametric.py  test_parser.py  test_paulis.py  test_paulis_parser.py  test_paulis_with_placeholders.py  test_persistent_qvm.py  test_pyqvm.py  test_qpu.py  test_qpu_client.py  test_quantum_computer.py  test_quil.py  test_quilt.py  test_qvm.py  test_reference_density_simulator.py  test_reference_wavefunction_simulator.py  test_resource_manager.py  test_unitary_tools.py  test_wavefunction.py  (+2 more)
rust/: Cargo.toml
rust/src/: conversion.rs  lib.rs  program.rs
rust/src/expression/: mod.rs
rust/src/instruction/: declaration.rs  gate.rs  mod.rs  quilt.rs
rust/src/primitive/: mod.rs  qubit.rs
scripts/: ci_install_deps  ci_publish_grpc_web.py
src/pyquil/: __init__.py  diagnostics.py  gates.py  noise.py  operator_estimation.py  quilatom.py  quilbase.py  wavefunction.py
test/: __init__.py
test/bench/: test_program.py
test/benchmarks/: test_program.py
test/e2e/: conftest.py  test_e2e.py
test/qcs_config/: secrets.toml  settings.toml
test/unit/: conftest.py  test_api.py  test_compatibility_quantum_computer.py  test_compatibility_v2_operator_estimation.py  test_compiler.py  (+43 more)
(+120 files in other folders)
