[tool.poetry]
name = "pyquil"
version = "4.0.0-rc.1"
description = "A Python library for creating Quantum Instruction Language (Quil) programs."
authors = ["Rigetti Computing <softapps@rigetti.com>"]
readme = "README.md"
repository = "https://github.com/rigetti/pyquil.git"
documentation = "https://pyquil-docs.rigetti.com"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]
keywords = ["quantum", "quil", "programming", "hybrid"]
packages = [{ include = "pyquil" }]

[tool.poetry.dependencies]
python = "^3.7,<3.11"
numpy = "^1.21"
scipy = "^1.7.3"
lark = "^0.11.1"
rpcq = "^3.10.0"
networkx = "^2.5"
importlib-metadata = { version = ">=3.7.3,<5", python = "<3.8" }
qcs-sdk-python = "0.3.3"
qcs-api-client = ">=0.21.0,<0.22.0"
retry = "^0.9.2"
types-python-dateutil = "^2.8.19"
types-retry = "^0.9.9"

# latex extra
ipython = { version = "^7.21.0", optional = true }

# docs extra
Sphinx = { version = "^4.0.2", optional = true }
sphinx-rtd-theme = { version = "^0.5.2", optional = true }
nbsphinx = { version = "^0.8.6", optional = true }
recommonmark = { version = "^0.7.1", optional = true }

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^3.8.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
mypy = "0.981"
pytest-xdist = "^2.2.1"
pytest-rerunfailures = "^9.1.1"
pytest-timeout = "^1.4.2"
pytest-mock = "^3.6.1"
pytest-freezegun = "^0.4.2"
respx = "^0.20"
nest-asyncio = "^1.5.6"

[tool.poetry.extras]
latex = ["ipython"]
docs = ["Sphinx", "sphinx-rtd-theme", "nbsphinx", "recommonmark"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | external         # pyquil-specific
  | gen3

)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
