[tool.poetry]
name = "pyquil"
version = "4.6.2-rc.3"
description = "A Python library for creating Quantum Instruction Language (Quil) programs."
authors = ["Rigetti Computing <softapps@rigetti.com>"]
readme = "README.md"
repository = "https://github.com/rigetti/pyquil.git"
documentation = "https://pyquil-docs.rigetti.com"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
]
keywords = ["quantum", "quil", "programming", "hybrid"]
packages = [{ include = "pyquil" }]
exclude = ["pyquil/conftest.py"]

[tool.poetry.dependencies]
python = "^3.8,<=3.12"
numpy = "^1.22"
scipy = "^1.7.3"
lark = "^0.11.1"
rpcq = "^3.10.0"
networkx = ">=2.5"
importlib-metadata = { version = ">=3.7.3,<5", python = "<3.8" }
qcs-sdk-python = "0.16.4"
tenacity = "^8.2.2"
types-python-dateutil = "^2.8.19"
types-retry = "^0.9.9"
packaging = "^23.1"

# latex extra
ipython = { version = "^7.21.0", optional = true }

# docs extra
Sphinx = { version = "^7.1.2", optional = true }
sphinx-rtd-theme = { version = "^1.3.0,<=2.0.0", optional = true }
nbsphinx = { version = "^0.9.1", optional = true }
recommonmark = { version = "^0.7.1", optional = true }
pandoc = {version = "2.4b0", optional = true}
matplotlib = {version = "^3.7.1", optional = true}
matplotlib-inline = {version = "^0.1.6", optional = true}
seaborn = {version = "^0.12.2", optional = true}
deprecated = "^1.2.13"
types-deprecated = "^1.2.9.2"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^3.8.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
toml = "^0.10.2"
pytest-xdist = "^3.3.1"
pytest-rerunfailures = "^12.0.0"
pytest-timeout = "^1.4.2"
pytest-mock = "^3.11.1"
respx = "^0.20"
nest-asyncio = "^1.5.6"
mock = { version = "^4.0", python = "<3.8" }
syrupy = "^3.0.6"

[tool.poetry.extras]
latex = ["ipython"]
docs = ["Sphinx", "sphinx-rtd-theme", "nbsphinx", "recommonmark", "pandoc", "matplotlib", "seaborn", "toml"]

[tool.poetry.group.dev.dependencies]
setuptools = {version = "^69.0.2", python = ">=3.12"}
mypy = "^1.8.0"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | external         # pyquil-specific
  | gen3

)
'''

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:pyquil.*:", "ignore::DeprecationWarning:test.unit.*:"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
